--- a/frontend/web/css/timeline.scss
+++ b/frontend/web/css/timeline.scss
@@ -6,43 +6,29 @@ body {
 	clear: both;
 }
 
-$finalHeight: 544px;
-$finalWidth: 2.5 * $finalHeight;
-$scrollBarHeight: 1px;
-
-::-webkit-scrollbar {
-  	width: $scrollBarHeight;
-  	height: $scrollBarHeight;
-}
-
-::-webkit-scrollbar-button {
-  width: $scrollBarHeight;
-  height: $scrollBarHeight;
-}
-
-.wrap {
-    overflow-x: hidden;
-}
-
 .container_inner {
 	width: 934px;
 	margin: 0 auto;
 }
 
 .timeline-bg {
-	position: absolute;
 	background: #dddedf;
   	background: -webkit-linear-gradient(left, #dddedf , #edeef0);
   	background: -o-linear-gradient(right, #dddedf, #edeef0);
   	background: -moz-linear-gradient(right, #dddedf, #edeef0);
-	background: linear-gradient(to right, #dddedf , #edeef0);
+  	background: linear-gradient(to right, #dddedf , #edeef0);
+    position: absolute;
     width: 100%;
 }
 
 .top_block {
+	font-family: "Proxima Nova Thin";
 	padding-top: 51px;
-    text-align: center;
-    
+	text-align: center;
+	a {
+		text-decoration: none;
+	}
+
 	.tass_logo {
 		float: left;
 	}
@@ -69,7 +55,6 @@ $scrollBarHeight: 1px;
 	}
 
 	.go_front {
-		font-family: "Proxima Nova Thin";  
 		border: 1px solid #fff;
 	    color: #fff;
 	    position: relative;
@@ -77,7 +62,6 @@ $scrollBarHeight: 1px;
 	    line-height: 38px;
 	    display: inline-block;
 	    padding: 0px 42px;
-		text-decoration: none;
 		&:before {
 			content: '';
 			display: block;
@@ -96,8 +80,8 @@ $scrollBarHeight: 1px;
     position: relative;
 	
 	h1 {
-		font-family: "Proxima Nova Bold";
 		text-align: center;
+		font-family: "Proxima Nova Bold";
 		font-size: 40px;
 		font-weight: bold;
 		color: #fff;
@@ -110,143 +94,123 @@ $scrollBarHeight: 1px;
     #section0 {
 		height: 1050px;
 
-		.squares {
-			& > .item {
-			   	width: $finalHeight;
-				height: $finalHeight;
-			}
-		}
-
-		.squares {
-			& > .item.mt {
-				margin-top: 215px;
-			}
-		}
-			
-		.horizontal-scroll-wrapper {
-			position: absolute;
-			cursor: pointer;
-  			display: block;
-  			top: 370px;
-  			left: 0px;
-  			width: calc(#{$finalHeight} + #{$scrollBarHeight});
-  			max-height: $finalWidth;
-  			margin: 0;
-  			padding-top: $scrollBarHeight;
-  			overflow-y: auto;
-  			overflow-x: hidden;
-  			transform: rotate(-90deg) translateY(-$finalHeight);
-  			transform-origin: right top;
-
-			.hr {
-				margin: 0 0 0 210px;
-				border: 1.6px solid #dbc8ae;
-			}
-
-			& > .item {
-				display: block;
-				transform: rotate(90deg);
-				// transform-origin: right top;
-			}
-
-			.item {
-				margin-top: 125px;
-			
-				.date {
+			.sliderbox {
+				display: flex;
+    			flex-direction: row;
+				margin-top: 40px;
+				
+				.item {
 					cursor: pointer;
-					padding-left: 30px;
-					padding-top: 30px;
-					width: 450px;
-					height: 100px;
-					.date-item {
-						color: #dbc8ae;
-						font-family: "Proxima Nova Bold";
-						font-size: 18px;
-						line-height: 24px;
+				    -webkit-transition: margin-left .5s ease-out;
+				       -moz-transition: margin-left .5s ease-out;
+				         -o-transition: margin-left .5s ease-out;
+					        transition: margin-left .5s ease-out;
+					
+					.date {
+						padding: 30px 0 0 30px;
+						height: 100px;
+						.date-item {
+							color: #dbc8ae;
+							font-size: 18px;
+							line-height: 24px;	
+							font-weight: 600;
+						}
 					}
-				}
-				
-				&.active > .date {
-					padding-top: 0px;
-				}
-				
-				&.active > .date > .date-item {
-					font-size: 40px;
-					line-height: 40px;
-				}
 
-				.description {
-					width: 510px;
-					height: 375px;
-				    background: #fff;
-					.circle {
-						display: none;
-					&.active {
-						display: unset;
-						top: 300px;
-						position: absolute;
-						border: 2px solid #dbc8ae;
-						border-radius: 50%;
-						cursor: pointer;
-					    font-family: "Proxima Nova Bold";							
-    					font-size: 20px;
-    					line-height: 50px;
-						text-align: center;
-    					height: 130px;
-						width: 130px;
-						&.fl {
-							margin-left: -65px;
-						}
-						&.fr {
-							margin-left: 440px;
-						}
-						.prev {
-							border-radius: 50%;
-							background-color: #dbc8ae;
-    						height: 50px;
-							width: 50px;
-							margin: 38px;
-							&:hover {
-								transform: scale(1.3);
+					&.active > .date {
+						padding-top: 0px;
+					}
+				
+					&.active > .date > .date-item {
+						font-size: 40px;
+						line-height: 40px;
+					}
+
+					.hr {
+						border: 1.6px solid #dbc8ae;
+					}
+
+					.description {
+				    	margin: 0 100px 0 0;
+						min-width: 510px;
+						max-width: 600px;
+						height: 500px;
+				    	background: #fff;
+
+						.circle {
+							display: none;
+							&.active {
+								display: unset;
+								top: 44%;
+								position: absolute;
+								border: 2px solid #dbc8ae;
+								border-radius: 50%;
+								cursor: pointer;
+								font-family: "Proxima Nova Bold";							
+								font-size: 20px;
+								line-height: 50px;
+								text-align: center;
+								height: 125px;
+								width: 125px;
+								&.fl {
+									margin-left: -65px;
+								}
+								&.fr {
+									margin-left: 445px;
+								}
+								.prev {
+									border-radius: 50%;
+									background-color: #dbc8ae;
+									height: 50px;
+									width: 50px;
+									margin: 35px;
+									&:hover {
+										transform: scale(1.25);
+									}
+								}
+								.next {
+									border-radius: 50%;
+									background-color: #dbc8ae;
+									height: 50px;
+									width: 50px;
+									margin: 35px;
+									&:hover {
+										transform: scale(1.25);
+									}							
+								}
 							}
 						}
-						.next {
-							border-radius: 50%;
-							background-color: #dbc8ae;
-    						height: 50px;
-							width: 50px;
-							margin: 38px;
-							&:hover {
-								transform: scale(1.3);
-							}							
+						.dot {
+							position: absolute;
+    						background-color: #fff;
+    						border: 3px solid #dbc8ae;
+    						border-radius: 18px;
+    						height: 26px;
+    						width: 26px;
+    						margin: -13px 0 0 15px;					
 						}
-					}}
-					.dot {
-						position: absolute;
-    					background-color: #fff;
-    					border: 3px solid #dbc8ae;
-    					border-radius: 18px;
-    					height: 26px;
-    					width: 26px;
-    					margin: -13px 0 0 15px;					
-					}
-					.dot + p {
-						padding-top: 40px;
-						padding-bottom: 20px;
-					}
-					p {
-					    font-family: "Proxima Nova Light";
-					    font-size: 18px;
-					    line-height: 30px;
-						padding: 0 30px;
-						margin: 0;
+
+						.dot + p {
+							padding-top: 40px;
+							padding-bottom: 20px;
+						}
+
+						p {
+						    font-family: "Proxima Nova Light";
+						    font-size: 18px;
+						    line-height: 30px;
+							padding: 0 30px;
+							margin: 0;
+						}
 					}
 				}
 			}
-				
-		}
-	}
 
+			.sliderbox:first-child {
+				margin-left: 225px;
+			}
+	}
+	
 	#section1 {
 		background: url('../images/timeline_section1.png') center top no-repeat;
 		width: 100%;
@@ -260,3 +224,56 @@ $scrollBarHeight: 1px;
 	}
 }
 
+$finalHeight: 250px;
+$finalWidth: 3 * $finalHeight;
+$scrollBarHeight: 1px;
+
+::-webkit-scrollbar {
+  width: $scrollBarHeight;
+  height: $scrollBarHeight;
+}
+
+::-webkit-scrollbar-button {
+  width: $scrollBarHeight;
+  height: $scrollBarHeight;
+}
+
+body {
+  background: #111;
+}
+
+div {
+  box-sizing: border-box;
+}
+
+.horizontal-scroll-wrapper {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: calc(#{$finalHeight} + #{$scrollBarHeight});
+  max-height: $finalWidth;
+  margin: 0;
+  padding-top: $scrollBarHeight;
+  background: #abc;
+  overflow-y: auto;
+  overflow-x: hidden;
+  transform: rotate(-90deg) translateY(-$finalHeight);
+  transform-origin: right top;
+  & > div {
+    display: block;
+    padding: 5px;
+    background: #cab;
+    transform: rotate(90deg);
+    transform-origin: right top;
+  }
+}
+
+.squares {
+  padding: $finalHeight 0 0 0;
+  & > div {
+    width: $finalHeight;
+    height: $finalHeight;
+    margin: 10px 0;
+  }
+}
