--- a/frontend/web/css/timeline.scss
+++ b/frontend/web/css/timeline.scss
@@ -1,7 +1,3 @@
-body {
-	font-family: "Proxima Nova";  
-}
-
 .clear {
 	clear: both;
 }
@@ -104,6 +100,7 @@ body {
 					        transition: margin-left .5s ease-out;
 				.item {
 					cursor: pointer;
+					font-family: "Proxima Nova Bold";											
 					.date {
 						padding: 30px 0 0 30px;
 						height: 100px;
@@ -202,10 +199,6 @@ body {
 						}
 					}
 				}
-			}
-
-			.sliderbox:first-child {
-				margin-left: 225px;
 			}
 	}
 	
