--- a/frontend/web/uw/sass/footer.scss
+++ b/frontend/web/uw/sass/footer.scss
@@ -11,8 +11,7 @@
 		p {
 			font-size: 14px;
 			color: white;
-			font-family: "Proxima Nova";
-			font-weight: 300;
+			font-family: "Proxima Nova Thin";
 			margin-bottom: 0px;
 			padding-bottom: 34px;
 		}
