--- a/frontend/web/uw/sass/uw.scss
+++ b/frontend/web/uw/sass/uw.scss
@@ -1,6 +1,9 @@
 .clear {
 	clear: both;
 }
+body {
+	min-width: 480px;
+}
 
 .top_block {
 	padding-top: 51px;
@@ -135,7 +138,6 @@
 
 
 .bottom_gallery {
-	padding-top: 122px;
 	.title_bottom_gallery {
 		font-size: 15px;
 		color: #000108;
@@ -180,10 +182,10 @@
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		background-size: 100% auto;
 		display: block;
 		content: '';
 		background: url('../../images/blue_top_bg.png') center top no-repeat;
+		background-size: 100% auto;
 	}
 }
 
@@ -194,4 +196,45 @@
 
 .white_text {
 	color: white!important;
+}
+
+.bottom_select_gallery {
+	padding-top: 122px;
+	display: flex;
+	flex-wrap: wrap;
+	.select_gallery {
+		width: 25%;
+		position: relative;
+		display: block;
+		overflow: hidden;
+		@media screen and (max-width: 999px) {
+			width: 50%;
+		}
+		&:before {
+			content: '';
+			display: none;
+			background: rgba(0, 56, 120, 0.4) url('../../images/open.svg') center no-repeat;
+			background-size: 134px;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			z-index: 2;
+		}
+		&:hover {
+			&:before {
+				display: block;
+			}
+			img {
+				-webkit-transform: scale(1.4);
+				-ms-transform: scale(1.4);
+				transform: scale(1.4);
+			}
+		}
+		img {
+			display: block;
+			width: 100%;
+			height: auto;
+			transition: .5s;
+		}
+	}
 }
